--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -156,7 +156,7 @@
           </ul>
         </div>
 
-        <div (click)="setCurrentItem('Broadcast')">
+        <!-- <div (click)="setCurrentItem('Broadcast')">
           <li
             [routerLink]="'/broadcast-sms'"
             (click)="setCurrentSubItem('SMS')"
@@ -192,9 +192,9 @@
               <span>WhatsApp</span>
             </li>
           </ul>
-        </div>
+        </div> -->
 
-        <div (click)="setCurrentItem('AI Prompt')">
+        <!-- <div (click)="setCurrentItem('AI Prompt')">
           <li
             *ngIf="haveBot"
             [routerLink]="'/official-ai-prompt/ai-prompt'"
@@ -232,7 +232,7 @@
               <span>Unofficial</span>
             </li>
           </ul>
-        </div>
+        </div> -->
       </ul>
 
       <ul class="sidebar-borders menu">
