--- a/src/app/screens/broadcast-sms/broadcast-sms.component.css
+++ b/src/app/screens/broadcast-sms/broadcast-sms.component.css
@@ -104,9 +104,9 @@
 }
 
 .ti-item button {
-  border: none;
+  /* border: none; */
   outline: none;
-  background-color: transparent;
+  /* background-color: transparent; */
   cursor: pointer;
 }
 
@@ -258,7 +258,9 @@
 .contacts {
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  padding: 1rem;
+  min-width: 10rem;
+  text-align: center;
   box-shadow: 0px 4px 20px 0px rgba(112, 144, 128, 0.2);
   border-radius: 12px;
 }
@@ -456,9 +458,9 @@
 }
 
 .ti-item button {
-  border: none;
+  /* border: none; */
   outline: none;
-  background-color: transparent;
+  /* background-color: transparent; */
   cursor: pointer;
 }
 
@@ -801,4 +803,147 @@
   width: 10px;
   display: inline-block;
   margin-bottom: 0;
+}
+
+.refresh-msg-tooltip {
+    cursor: pointer;
+    position: relative;
+/* display: inline-block; */
+    width: 100%;
+    padding: 2px;
+    /* text-align: center; */
+    /* margin: 0 1rem; */
+}
+
+.refresh-msg-tooltip .refresh-msg-tooltiptext {
+    visibility: hidden;
+    font-size: 0.7rem;
+    background-color: #ffffff;
+    color: #000000;
+    text-align: center;
+    width: 450px;
+    right: -205px;
+    display: flex;
+    border-radius: 6px;
+    padding: 1rem;
+    top: 80%;
+    position: absolute;
+    z-index: 1;
+    transition: opacity 1s ease-out;
+    box-shadow: 0px 0px 7px 0px #e6e6e6;
+}
+
+.refresh-msg-tooltip:hover .refresh-msg-tooltiptext {
+    visibility: visible;
+}
+
+
+.forspan {
+       width: 100%;
+    display: inline-block;
+    font-size: 0.85rem;
+    white-space: nowrap;
+    overflow: hidden !important;
+    text-overflow: ellipsis;
+    margin: 0px;
+    text-align: center;
+    min-width: 10rem;
+}
+
+
+/* Confirmation modal */
+
+.modal-backdrop-custom {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-custom {
+  background-color: white;
+    padding: 1.5rem;
+    border-radius: 10px;
+    width: 500px;
+    height: 250px;
+    display: flex;
+    text-align: center;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+}
+
+.buttons {
+  margin-top: 1rem;
+  gap: 1rem;
+  display: flex;
+  justify-content: space-around;
+}
+
+button {
+  padding: 8px 16px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+/* button:first-child {
+  background-color: #d9534f;
+  color: white;
+}
+
+button:last-child {
+  background-color: #f0f0f0;
+} */
+
+
+.btn-danger {
+  color: #fff;
+  background-color: #dc3545;
+  border-color: #dc3545;
+}
+
+.btn-danger:hover {
+  color: #fff;
+  background-color: #bb2d3b;
+  border-color: #b02a37;
+}
+
+.btn-danger:focus {
+  outline: 0;
+  box-shadow: 0 0 0 0.25rem rgba(225, 83, 97, 0.5);
+}
+
+.btn-danger:active {
+  background-color: #b02a37;
+  border-color: #a52834;
+}
+
+.btn-secondary {
+  color: #fff;
+  background-color: #6c757d;
+  border-color: #6c757d;
+}
+
+.btn-secondary:hover {
+  color: #fff;
+  background-color: #5c636a;
+  border-color: #565e64;
+}
+
+.btn-secondary:focus {
+  outline: 0;
+  box-shadow: 0 0 0 0.25rem rgba(130, 138, 145, 0.5);
+}
+
+.btn-secondary:active {
+  background-color: #545b62;
+  border-color: #4e555b;
 }
