--- a/src/app/screens/devices/devices.component.css
+++ b/src/app/screens/devices/devices.component.css
@@ -1209,15 +1209,17 @@ tr {
     border-radius: 10px;
     padding: 1rem; */
   /* background-color: #ffffff; */
-  background-color: #e7e7e7;
-  max-height: 300px;
-  min-height: fit-content;
-  display: flex;
-  justify-content: space-between;
-  margin-left: 5rem;
-  padding: 1rem;
-  align-items: center;
-  border-radius: 5px;
+    background-color: #e7e7e7;
+    max-height: 300px;
+    min-height: -moz-fit-content;
+    min-height: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: space-between;
+    margin-left: 5rem;
+    padding: 1rem;
+    object-fit: center;
+    border-radius: 5px;
 
 @media (max-width: 575.98px) {
   /* Phones (portrait) */
@@ -1251,8 +1253,8 @@ tr {
 }
 @media (min-width: 1600px) {
   /* Very large desktops, 4K screens */
-  font-size: medium;
-  h5{font-size: larger;}
+  font-size: small;
+  h5{font-size: large;}
 }
 }
 
