--- a/src/app/screens/devices/devices.component.html
+++ b/src/app/screens/devices/devices.component.html
@@ -230,9 +230,7 @@
     max-height: 275px;
     overflow-x: auto;
     margin-right: 1rem;
-    padding: 1rem
-12.8px
-;">
+    padding: 1rem;">
             <h5 style="margin-bottom: 1rem;">To send and receive messages, you have to authorize our server like for
               WhatsApp
               Web.</h5>
