--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -42,14 +42,14 @@
           <span>Devices</span>
         </li>
 
-        <li [routerLink]="'/chats'" (click)="setCurrentItem('Chats')" [class.active]="currentItem === 'Chats'"
+        <!-- <li [routerLink]="'/chats'" (click)="setCurrentItem('Chats')" [class.active]="currentItem === 'Chats'"
           class="menu_item">
           <div>
             <img src="../../../assets/messages-white.png" />
             <img src="../../../assets/messages.png" />
           </div>
           <span>Chats</span>
-        </li>
+        </li> -->
 
         <div (click)="setCurrentItem('Chatbots')">
           <li *ngIf="haveBot" [routerLink]="'/chatbot/analytics'" (click)="setCurrentSubItem('Analytics')"
