--- a/src/app/screens/broadcast-sms/broadcast-sms.component.css
+++ b/src/app/screens/broadcast-sms/broadcast-sms.component.css
@@ -74,6 +74,7 @@
   display: grid;
   grid-template-columns: 2fr 1fr 1fr 1fr 3fr 2fr 2fr;
   gap: 1rem;
+  margin-right: 10px;
   border-radius: 5px;
   padding: 1rem;
   border-bottom: 1px solid #eee;
@@ -89,6 +90,13 @@
 }
 
 .ti-item {
+  /* display: flex !important;
+  justify-content: center !important;
+  align-items: center !important; */
+  text-align: center !important;
+  min-width: 100px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   color: #333540;
   text-align: center;
   font-family: "DM Sans";
@@ -102,7 +110,11 @@
   gap: 1rem;
   justify-content: center;
 }
-
+.ti-item.special {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .ti-item button {
   /* border: none; */
   outline: none;
@@ -410,7 +422,7 @@
 }
 
 .table-wrapper {
-  overflow-x: auto;
+  overflow-x: hidden;
 }
 
 .table {
@@ -444,7 +456,6 @@
 .ti-item {
   text-align: center;
   color: #7b7b7b;
-  text-align: center;
   font-size: 1rem;
   font-style: normal;
   font-weight: 500;
@@ -456,7 +467,11 @@
   gap: 1rem;
   justify-content: center;
 }
-
+.ti-item:nth-child(6) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .ti-item button {
   /* border: none; */
   outline: none;
@@ -806,50 +821,48 @@
 }
 
 .refresh-msg-tooltip {
-    cursor: pointer;
-    position: relative;
-/* display: inline-block; */
-    width: 100%;
-    padding: 2px;
-    /* text-align: center; */
-    /* margin: 0 1rem; */
+  cursor: pointer;
+  position: relative;
+  /* display: inline-block; */
+  width: 100%;
+  padding: 2px;
+  /* text-align: center; */
+  /* margin: 0 1rem; */
 }
 
 .refresh-msg-tooltip .refresh-msg-tooltiptext {
-    visibility: hidden;
-    font-size: 0.7rem;
-    background-color: #ffffff;
-    color: #000000;
-    text-align: center;
-    width: 450px;
-    right: -205px;
-    display: flex;
-    border-radius: 6px;
-    padding: 1rem;
-    top: 80%;
-    position: absolute;
-    z-index: 1;
-    transition: opacity 1s ease-out;
-    box-shadow: 0px 0px 7px 0px #e6e6e6;
+  visibility: hidden;
+  font-size: 0.7rem;
+  background-color: #ffffff;
+  color: #000000;
+  text-align: center;
+  width: 450px;
+  right: -205px;
+  display: flex;
+  border-radius: 6px;
+  padding: 1rem;
+  top: 80%;
+  position: absolute;
+  z-index: 1;
+  transition: opacity 1s ease-out;
+  box-shadow: 0px 0px 7px 0px #e6e6e6;
 }
 
 .refresh-msg-tooltip:hover .refresh-msg-tooltiptext {
-    visibility: visible;
+  visibility: visible;
 }
-
 
 .forspan {
-       width: 100%;
-    display: inline-block;
-    font-size: 0.85rem;
-    white-space: nowrap;
-    overflow: hidden !important;
-    text-overflow: ellipsis;
-    margin: 0px;
-    text-align: center;
-    min-width: 10rem;
+  width: 100%;
+  display: inline-block;
+  font-size: 0.85rem;
+  white-space: nowrap;
+  overflow: hidden !important;
+  text-overflow: ellipsis;
+  margin: 0px;
+  text-align: center;
+  min-width: auto;
 }
-
 
 /* Confirmation modal */
 
@@ -868,16 +881,16 @@
 
 .modal-custom {
   background-color: white;
-    padding: 1.5rem;
-    border-radius: 10px;
-    width: 500px;
-    height: 250px;
-    display: flex;
-    text-align: center;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: column;
+  padding: 1.5rem;
+  border-radius: 10px;
+  width: 500px;
+  height: 250px;
+  display: flex;
+  text-align: center;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
 }
 
 .buttons {
@@ -902,7 +915,6 @@ button {
 button:last-child {
   background-color: #f0f0f0;
 } */
-
 
 .btn-danger {
   color: #fff;
