--- a/src/app/screens/broadcast-sms/broadcast-sms.component.html
+++ b/src/app/screens/broadcast-sms/broadcast-sms.component.html
@@ -2,10 +2,19 @@
   <div class="header">
     <!-- <div class="kanban">Broadcast <strong> / SMS</strong></div> -->
     <button (click)="this.addMode = true" *ngIf="!addMode">
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-        <path fill-rule="evenodd" clip-rule="evenodd"
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="20"
+        height="20"
+        viewBox="0 0 20 20"
+        fill="none"
+      >
+        <path
+          fill-rule="evenodd"
+          clip-rule="evenodd"
           d="M0 1.2227L0.877727 0.344971H7.89955L8.77727 1.2227V8.24452L7.89955 9.12224H0.877727L0 8.24452V1.2227ZM1.75545 2.10043V7.36679H7.02182V2.10043H1.75545ZM11.4105 0.344971L10.5327 1.2227V8.24452L11.4105 9.12224H18.4323L19.31 8.24452V1.2227L18.4323 0.344971H11.4105ZM12.2882 7.36679V2.10043H17.5545V7.36679H12.2882ZM15.7991 19.655H14.0436V16.1441H10.5327V14.3886H14.0436V10.8777H15.7991V14.3886H19.31V16.1441H15.7991V19.655ZM0.877727 10.8777L0 11.7554V18.7772L0.877727 19.655H7.89955L8.77727 18.7772V11.7554L7.89955 10.8777H0.877727ZM1.75545 17.8995V12.6332H7.02182V17.8995H1.75545Z"
-          fill="white" />
+          fill="white"
+        />
       </svg>
       <span>Add New Broadcast</span>
     </button>
@@ -15,7 +24,13 @@
     <div class="add-top">
       <h1>SMS Create Broadcast</h1>
       <div class="btns">
-        <button [disabled]="isLoad" (click)="setBroadcast()" style="min-width: 6rem;">Send</button>
+        <button
+          [disabled]="isLoad"
+          (click)="setBroadcast()"
+          style="min-width: 6rem"
+        >
+          Send
+        </button>
         <!-- <button (click)="showDateAndTimeModal = true">
           <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32"
             viewBox="0 0 32 32" fill="none">
@@ -44,29 +59,52 @@
         <div class="fields">
           <div class="inp-con">
             <label for="">Broadcast Name</label>
-            <input type="text" [(ngModel)]="name" placeholder="Enter in English" />
+            <input
+              type="text"
+              [(ngModel)]="name"
+              placeholder="Enter in English"
+            />
           </div>
           <div class="inp-con">
             <label for="">Delay Time (seconds)</label>
-            <input type="number" [(ngModel)]="delay" placeholder="Enter in English" />
+            <input
+              type="number"
+              [(ngModel)]="delay"
+              placeholder="Enter in English"
+            />
           </div>
           <div class="inp-con">
             <label for="">Update Excel Sheet</label>
-            <input type="file" (change)="onFileChange($event)" accept=".xlsx, .xls, .csv" />
+            <input
+              type="file"
+              (change)="onFileChange($event)"
+              accept=".xlsx, .xls, .csv"
+            />
           </div>
           <div class="inp-con">
             <label for="">Contacts Column</label>
             <select [(ngModel)]="column">
-              <option *ngFor="let col of excelHeaders;let i = index;" [value]="i+1">{{col}}</option>
+              <option
+                *ngFor="let col of excelHeaders; let i = index"
+                [value]="i + 1"
+              >
+                {{ col }}
+              </option>
             </select>
           </div>
           <div class="inp-con message">
             <div>
-              <label for="">Message
-                <img style="width: 20px" src="../../../assets/warning.png" /></label>
+              <label for=""
+                >Message
+                <img style="width: 20px" src="../../../assets/warning.png"
+              /></label>
               <span>{{ newBroadcastDesc.length }}/160</span>
             </div>
-            <textarea [(ngModel)]="messageBody" maxlength="160" placeholder=" Type message here"></textarea>
+            <textarea
+              [(ngModel)]="messageBody"
+              maxlength="160"
+              placeholder=" Type message here"
+            ></textarea>
           </div>
         </div>
       </div>
@@ -94,7 +132,7 @@
   </ng-container>
 
   <ng-container *ngIf="!addMode">
-    <div class="g-bg-head">Drafts</div>
+    <div class="g-bg-head">My Broadcast</div>
 
     <div class="table-wrapper">
       <div class="table">
@@ -107,62 +145,68 @@
           <div class="ti-item">Status</div>
           <div class="ti-item">Action</div>
         </div>
-        <div class="t-item" *ngFor="let broadcast of broadcastList;let i = index;">
-          <div class="ti-item">{{broadcast.createdAt |
-            date:"hh:mm"}}</div>
-          <div class="ti-item">{{broadcast.broadcast_name}}</div>
-          <div class="refresh-msg-tooltip">
-            <span class="forspan">Contacts</span>
-            <span class="refresh-msg-tooltiptext">
-              <p>
-                <span *ngFor="let contact of broadcast.contacts;let j = index;"> [{{contact}}]
-                </span>
-              </p>
-            </span>
-          </div>
-          <div class="ti-item">{{ broadcast.delay_time }}</div>
-          <div class="refresh-msg-tooltip">
-            <span class="forspan">{{broadcast.message_body}}</span>
-            <span class="refresh-msg-tooltiptext">{{broadcast.message_body}}</span>
+        <div
+          class="t-item"
+          *ngFor="let broadcast of broadcastList; let i = index"
+        >
+          {{ broadcast.createdAt | date : "dd/MM/yyyy hh:mm a" }}
+          <div class="ti-item">
+            <div class="refresh-msg-tooltip">
+              <span class="forspan">{{ broadcast.broadcast_name }}</span>
+              <span class="refresh-msg-tooltiptext">{{
+                broadcast.broadcast_name
+              }}</span>
+            </div>
           </div>
           <div class="ti-item">
-            <p [ngClass]="broadcast.status === 'complete' ? 's_dot_r' : 's_dot_g'"></p>
+            <div class="refresh-msg-tooltip">
+              <span class="forspan">Contacts</span>
+              <span class="refresh-msg-tooltiptext">
+                <p>
+                  <span
+                    *ngFor="let contact of broadcast.contacts; let j = index"
+                  >
+                    [{{ contact }}]
+                  </span>
+                </p>
+              </span>
+            </div>
+          </div>
+          <div class="ti-item">{{ broadcast.delay_time }}</div>
+          <div class="ti-item">
+            <div class="refresh-msg-tooltip">
+              <span class="forspan">{{ broadcast.message_body }}</span>
+              <span class="refresh-msg-tooltiptext">{{
+                broadcast.message_body
+              }}</span>
+            </div>
+          </div>
+          <div class="ti-item special">
+            <p
+              [ngClass]="
+                broadcast.status === 'complete' ? 's_dot_g' : 's_dot_r'
+              "
+            ></p>
             {{ broadcast.status }}
           </div>
           <div class="ti-item">
-            <button class="btn-secondary" (click)="terminateBroadcast(i,broadcast)">Terminate</button>
-            <button class="btn-danger" (click)="deleteBroadcast(i,broadcast)">
-              Delete
-              <!-- <svg xmlns="http://www.w3.org/2000/svg" width="24" height="23" viewBox="0 0 24 23" fill="none">
-                <path
-                  d="M17.9232 21.6538H6.07707C5.62825 21.6538 5.1978 21.4755 4.88043 21.1581C4.56306 20.8408 4.38477 20.4103 4.38477 19.9615V4.73071H19.6155V19.9615C19.6155 20.4103 19.4372 20.8408 19.1199 21.1581C18.8025 21.4755 18.3721 21.6538 17.9232 21.6538Z"
-                  stroke="#24CC63" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round" />
-                <path d="M9.46094 16.5761V9.80688" stroke="#24CC63" stroke-width="1.3" stroke-linecap="round"
-                  stroke-linejoin="round" />
-                <path d="M14.5391 16.5761V9.80688" stroke="#24CC63" stroke-width="1.3" stroke-linecap="round"
-                  stroke-linejoin="round" />
-                <path d="M1 4.73071H23" stroke="#24CC63" stroke-width="1.3" stroke-linecap="round"
-                  stroke-linejoin="round" />
-                <path
-                  d="M14.5388 1.3457H9.46184C9.01301 1.3457 8.58257 1.524 8.2652 1.84137C7.94783 2.15874 7.76953 2.58918 7.76953 3.03801V4.73032H16.2311V3.03801C16.2311 2.58918 16.0528 2.15874 15.7354 1.84137C15.418 1.524 14.9876 1.3457 14.5388 1.3457Z"
-                  stroke="#24CC63" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round" />
-              </svg> -->
+            <button
+              class="btn-secondary"
+              (click)="terminateBroadcast(i, broadcast)"
+            >
+              Terminate
             </button>
-            <!-- <button>
-              <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23" fill="none">
-                <path
-                  d="M20.9338 2.0259C20.6171 1.71053 20.2411 1.46105 19.8274 1.29185C19.4137 1.12265 18.9706 1.03709 18.5236 1.04012C18.0767 1.04314 17.6348 1.13469 17.2234 1.30948C16.8121 1.48426 16.4394 1.73882 16.127 2.05844L2.64566 15.5398L1 21.9597L7.41992 20.3131L20.9013 6.83177C21.221 6.5195 21.4756 6.14695 21.6505 5.73567C21.8253 5.32438 21.9169 4.88252 21.9199 4.43562C21.9229 3.98873 21.8374 3.54566 21.6681 3.13205C21.4988 2.71843 21.2493 2.34247 20.9338 2.0259V2.0259Z"
-                  stroke="#615E83" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round" />
-              </svg>
-            </button> -->
+            <button class="btn-danger" (click)="deleteBroadcast(i, broadcast)">
+              Delete
+            </button>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="g-bg-head">History</div>
+    <!-- <div class="g-bg-head">History</div> -->
 
-    <div class="no-history">Nothing is here</div>
+    <!-- <div class="no-history">Nothing is here</div> -->
   </ng-container>
 </div>
 
@@ -171,9 +215,20 @@
     <div class="mh-d">
       <h1>Set Schedule</h1>
       <button (click)="showDateAndTimeModal = false">
-        <svg xmlns="http://www.w3.org/2000/svg" width="21" height="19" viewBox="0 0 21 19" fill="none">
-          <path d="M18.8887 17.3363L2.16671 1.96289M18.8887 1.96289L2.16671 17.3363" stroke="#2EBC96"
-            stroke-width="2.38885" stroke-linecap="round" stroke-linejoin="round" />
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="21"
+          height="19"
+          viewBox="0 0 21 19"
+          fill="none"
+        >
+          <path
+            d="M18.8887 17.3363L2.16671 1.96289M18.8887 1.96289L2.16671 17.3363"
+            stroke="#2EBC96"
+            stroke-width="2.38885"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
         </svg>
       </button>
     </div>
@@ -181,10 +236,19 @@
       <h1>Enter Date & Time</h1>
       <div class="mhd-btns">
         <button>
-          <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28" fill="none">
-            <path fill-rule="evenodd" clip-rule="evenodd"
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="28"
+            height="28"
+            viewBox="0 0 28 28"
+            fill="none"
+          >
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
               d="M13.7111 27.711C6.13867 27.711 0 21.5724 0 13.9999C0 6.42749 6.13867 0.288818 13.7111 0.288818C21.2835 0.288818 27.4222 6.42749 27.4222 13.9999C27.4222 21.5724 21.2835 27.711 13.7111 27.711ZM17.6408 7.64636L7.35754 17.9297C6.68822 18.599 6.68822 19.6842 7.35754 20.3535C8.02686 21.0228 9.11203 21.0228 9.78135 20.3535L20.0647 10.0702C20.7339 9.40085 20.7339 8.31568 20.0647 7.64636C19.3954 6.97704 18.3102 6.97704 17.6408 7.64636Z"
-              fill="#333540" />
+              fill="#333540"
+            />
           </svg>
           <span> Cancel </span>
         </button>
@@ -218,7 +282,12 @@
       <h3>Are you sure?</h3>
       <p>This action cannot be undone.</p>
       <div class="buttons">
-        <button class="btn-secondary" (click)="confirm(broadcastList[currentBroadcastIndex])">Confirm</button>
+        <button
+          class="btn-secondary"
+          (click)="confirm(broadcastList[currentBroadcastIndex])"
+        >
+          Confirm
+        </button>
         <button class="btn-danger" (click)="cancel()">Cancel</button>
       </div>
     </div>
