--- a/src/app/screens/button-stats/button-stats.component.html
+++ b/src/app/screens/button-stats/button-stats.component.html
@@ -5,9 +5,44 @@
     <input type="text" placeholder="Search Loactions" />
   </div> -->
   <div class="rightIcon">
-    <span>View </span>
-    <img src="../../../assets/icons/Frame 73.svg" alt="" />
-    <img src="../../../assets/icons/Frame 74.svg" alt="" />
+    <img
+      src="../../../assets/icons/calendar-249.png"
+      alt="calendar-Icon"
+      class="calendarIcon"
+      (click)="toggleCalendar()"
+    />
+  </div>
+  <div class="calendar" *ngIf="showCalendar">
+    <div class="selected-info">
+      <p>Start: {{ selectedStart | date }}</p>
+      <p>End: {{ selectedEnd | date }}</p>
+    </div>
+    <div class="calendar-header">
+      <button (click)="generateCalendar(currentYear, currentMonth - 1)">
+        &lt;
+      </button>
+      <span>{{ currentYear }} - {{ currentMonth + 1 }}</span>
+      <button (click)="generateCalendar(currentYear, currentMonth + 1)">
+      </button>
+    </div>
+
+    <div class="calendar-grid">
+      <div
+        class="day-name"
+        *ngFor="let name of ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat']"
+      >
+        {{ name }}
+      </div>
+      <div
+        class="day"
+        *ngFor="let day of days"
+        [class.disabled]="!day.isCurrentMonth || !day.isInRange"
+        [class.selected]="isSelected(day)"
+        (click)="selectDate(day)"
+      >
+        {{ day.isCurrentMonth ? day.date.getDate() : "" }}
+      </div>
+    </div>
   </div>
 </header>
 
@@ -33,13 +68,13 @@
         <div class="countBox">
           <div class="total-press">
             <div class="">
-              <span class="text-[#1C1C1C] fw-bold">Total Sent</span>
+              <span class="text-[#1C1C1C]">Total Sent</span>
             </div>
             <strong>{{ template.topSentCount | number }}</strong>
           </div>
           <div class="total-clicks">
             <div class="">
-              <span class="text-[#1C1C1C] fw-bold">Total Clicks</span>
+              <span class="text-[#1C1C1C]">Total Clicks</span>
             </div>
             <strong>{{ template.totalClicks | number }}</strong>
           </div>
@@ -102,13 +137,13 @@
         <div class="countBox">
           <div class="total-press">
             <div class="">
-              <span class="text-[#1C1C1C] fw-bold">Total Sent</span>
+              <span class="text-[#1C1C1C]">Total Sent</span>
             </div>
             <strong>{{ template.topSentCount | number }}</strong>
           </div>
           <div class="total-clicks">
             <div class="">
-              <span class="text-[#1C1C1C] fw-bold">Total Clicks</span>
+              <span class="text-[#1C1C1C]">Total Clicks</span>
             </div>
             <strong>{{ template.totalClicks | number }}</strong>
           </div>
@@ -124,8 +159,8 @@
               >{{ item.percent }}%
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                width="13"
-                height="14"
+                width="12"
+                height="12"
                 viewBox="0 0 13 14"
                 fill="none"
               >
@@ -171,13 +206,13 @@
         <div class="countBox">
           <div class="total-press">
             <div class="">
-              <span class="text-[#1C1C1C] fw-bold">Total Sent</span>
+              <span class="text-[#1C1C1C]">Total Sent</span>
             </div>
             <strong>{{ template.topSentCount | number }}</strong>
           </div>
           <div class="total-clicks">
             <div class="">
-              <span class="text-[#1C1C1C] fw-bold">Total Clicks</span>
+              <span class="text-[#1C1C1C]">Total Clicks</span>
             </div>
             <strong>{{ template.totalClicks | number }}</strong>
           </div>
