devices issue &  calender imporvment

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -160,6 +160,7 @@
           >
             <div>
               <img src="../../../assets/chatboticon.png" alt="" />
+              <img src="../../../assets/chatboticonw.png" alt="icon" />
             </div>
             <span>Chat History</span>
           </li>
