--- a/src/app/screens/button-stats/button-stats.component.html
+++ b/src/app/screens/button-stats/button-stats.component.html
@@ -6,7 +6,7 @@
   </div> -->
   <div class="rightIcon">
     <img
-      src="../../../assets/icons/calendar-249.png"
+      src="../../../assets/icons/Group 1000004276.svg"
       alt="calendar-Icon"
       class="calendarIcon"
       (click)="toggleCalendar()"
@@ -22,8 +22,9 @@
         &lt;
       </button>
       <span>{{ currentYear }} - {{ currentMonth + 1 }}</span>
-      <button (click)="generateCalendar(currentYear, currentMonth + 1)">
-      </button>
+      <button
+        (click)="generateCalendar(currentYear, currentMonth + 1)"
+      ></button>
     </div>
 
     <div class="calendar-grid">
