device graph issue.,  sidebar icon missing, review page issue,

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -159,8 +159,8 @@
             class="menu_item"
           >
             <div>
-              <img src="../../../assets/chatboticon.png" alt="" />
-              <img src="../../../assets/chatboticonw.png" alt="icon" />
+              <img src="../../../assets/icons/chatHistory1.svg" alt="" />
+              <img src="../../../assets/icons/chatHistory2.svg" alt="" />
             </div>
             <span>Chat History</span>
           </li>
