buttonstats api implementation

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -194,7 +194,7 @@
         </div>
         <div (click)="setCurrentItem('Buttons Stats')">
           <li
-            [routerLink]="'/Buttons_Stats'"
+            [routerLink]="'/buttonsStats'"
             (click)="setCurrentSubItem('Buttons Stats')"
             [class.active]="currentItem === 'Buttons Stats'"
             class="menu_item"
