--- a/src/app/screens/button-stats/button-stats.component.html
+++ b/src/app/screens/button-stats/button-stats.component.html
@@ -59,7 +59,22 @@
   >
     <app-loader></app-loader>
   </div>
-  <div class="col">
+  <div
+    class="no-data"
+    *ngIf="
+      !loading && col1.length === 0 && col2.length === 0 && col3.length === 0
+    "
+    style="
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 40vh;
+      width: 100%;
+    "
+  >
+    <h3>No data found in this range 🚫</h3>
+  </div>
+  <div class="col" *ngIf="!loading && col1.length > 0">
     <div class="card" *ngFor="let template of col1">
       <div class="card-body">
         <div
@@ -128,7 +143,7 @@
     </div>
   </div>
 
-  <div class="col">
+  <div class="col" *ngIf="!loading && col2.length > 0">
     <div class="card" *ngFor="let template of col2">
       <div class="card-body">
         <div
@@ -197,7 +212,7 @@
     </div>
   </div>
 
-  <div class="col">
+  <div class="col" *ngIf="!loading && col3.length > 0">
     <div class="card" *ngFor="let template of col3">
       <div class="card-body">
         <div
