calender issue fixed

--- a/src/app/screens/button-stats/button-stats.component.html
+++ b/src/app/screens/button-stats/button-stats.component.html
@@ -24,7 +24,7 @@
       <span>{{ currentYear }} - {{ currentMonth + 1 }}</span>
       <button
         (click)="generateCalendar(currentYear, currentMonth + 1)"
-      ></button>
+      >&gt;</button>
     </div>
 
     <div class="calendar-grid">
